# wxdata

./: CONTRIBUTING.md  README.md  Untitled.ipynb  Untitled1.ipynb  Untitled3.ipynb  Untitled4.ipynb  Untitled6.ipynb  ec_test.py  gefs.wave.t18z.c00.global.0p25.f000.grib2.5b7b6.idx  gfs_test.py  old.py  ping_test.py  process_test.py  pyproject.toml  pyproject.yml  scanner_test.py  setup.py  sounding_test.py  sounding_tests.py  test.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  Untitled1-checkpoint.ipynb  Untitled2-checkpoint.ipynb  Untitled4-Copy1-checkpoint.ipynb  Untitled4-checkpoint.ipynb  Untitled5-checkpoint.ipynb  gfs_test_1-checkpoint.py
Documentation/: ECMWF AIFS Post Processing.md  ECMWF IFS Post Processing.md  ECMWF IFS Wave Post Processing.md  ECMWF_AIFS.md  ECMWF_High_Res_IFS.md  ECMWF_IFS.md  ECMWF_IFS_Wave.md  GEFS.md  GEFS0P25.md  GEFS0P50 Secondary Parameters.md  GEFS0P50.md  GFS0P25 Secondary Parameters.md  GFS0P25.md  GFS0P50.md  Landing Page.md  Primary GEFS Post-Processing.md  Primary GFS Post Processing.md  RTMA Post Processing.md  Secondary GEFS Post Processing.md  Secondary GFS Post Processing.md  aigefs_members_post_processing.md  aigefs_pressure_members.md  aigefs_single.md  aigefs_single_post_processing.md  aigefs_surface_members.md  aigfs.md  aigfs_post_processing.md  cyclic_point.md  line_query.md  metars.md  nfdrs forecast.md  noaa.md  pixel_query.md  raws sig.md  rtma comparison.md  rtma.md  run_external_scripts.md  shift_longitude.md  single_raws.md  wyoming_soundings.md  (+1 more)
RAWS SIGs/EACC/: EACC_StationList.csv
RAWS SIGs/GBCC/: GBCC_StationList.csv
RAWS SIGs/NRCC/: NRCC_StationList.csv
RAWS SIGs/NWCC/: NWCC_StationList.csv
RAWS SIGs/ONCC/: ONCC_StationList.csv
RAWS SIGs/OSCC/: OSCC_StationList.csv
RAWS SIGs/RMCC/: RMCC_StationList.csv
RAWS SIGs/SACC/: SACC_StationList.csv
RAWS SIGs/SWCC/: SWCC_StationList.csv
src/wxdata/: __init__.py
wxdata/: __init__.py  fems.py  gefs.py  nomads.py  nws.py  raws_sigs.py  scanner.py  untitled.py  utils.py  wyoming_soundings.py
wxdata/calc/: __init__.py  calc.c  calc.cp313-win_amd64.pyd  calc.py  calc.pyx  derived_fields.py  kinematics.py  operations.py  (+2 more)
(+125 files in other folders)
