[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "wxdata"
version = "1.0"
authors = [
  { name="Eric J Drewitz"},
]
description = "An open source library for downloading and pre-processing various types of weather data."
readme = "README.md"
keywords = ["meteorology", "science", "data-analysis", "weather", "forecasting", "climatology", "climate science"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
  "metpy>=1.5.1",
  "numpy>=1.24",
  "pandas>=2.2",
  "xarray>=2023.1.0",
  "netcdf4>=1.7.1",
  "cartopy>=0.21.0",
  "beautifulsoup4>=4.13.4",
  "requests>=2.32.4",
  "cfgrib>=0.9.10.4"
 
]
