[project]
name = "wxdata"
version = "0.1"
description = "An open source library for downloading and pre/post-processing various types of weather data. Friendly for VPN/PROXY connections."
readme = "README.md"
requires-python = ">=3.10"
license-files = ["LICENSE*"]
authors = [
    { name = "Eric J. Drewitz" },
]
keywords = ["meteorology", "atmospheric sciences"]
classifiers = [
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Operating System :: OS Independent",
]

dependencies = [
  "metpy>=1.5.1",
  "numpy>=1.24",
  "pandas>=2.2",
  "xarray>=2023.1.0",
  "netcdf4>=1.7.1",
  "cartopy>=0.21.0",
  "beautifulsoup4>=4.13.4",
  "requests>=2.32.4",
  "cfgrib>=0.9.10.4",
  "dask>=2025.5.1"
 
]

[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["wxdata"]  # Look for packages in the wxdata directory

[project.urls]
Documentation = "https://github.com/edrewitz/wxdata/blob/main/Documentation/Landing%20Page.md"
Repository = "https://github.com/edrewitz/wxdata/tree/main"
